1. 使用原文件名创建新文件; 2. 添加部分参数设置; 3. 添加MappedByteBuffer使用;